# vibe-coding-example

notes/: .dockerignore  .env.example  .gitignore  API_ENDPOINTS.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  init.sql
notes/frontend/: Dockerfile  README.md  app.js  index.html  nginx.conf  package.json  serve.py  styles.css
notes/scripts/: health-check.sh  verify-setup.sh
notes/src/: main.rs
notes/src/api/: auth.rs  mod.rs  notes.rs
notes/src/auth/: mod.rs
notes/src/db/: mod.rs
notes/src/dto/: mod.rs
notes/src/entities/: mod.rs  notes.rs  users.rs
notes/src/migration/: m20231201_000001_create_users_table.rs  m20231201_000002_create_notes_table.rs  mod.rs
notes/src/services/: mod.rs  note_service.rs  user_service.rs
todo/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  init.sql
todo/src/: auth.rs  config.rs  database.rs  error.rs  main.rs  models.rs  routes.rs
todo/src/handlers/: auth.rs  mod.rs  todo.rs
todo/static/: index.html  script.js  styles.css
