[package]
name = "note-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
rocket = { version = "0.5", features = ["json"] }

# Database ORM
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "with-uuid", "with-chrono"] }
sea-orm-migration = "0.12"

# Authentication
jsonwebtoken = "9.2"
argon2 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID support
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Environment variables
dotenv = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CORS
rocket_cors = "0.6"

# Validation
validator = { version = "0.16", features = ["derive"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
tracing-log = "0.1"

# Lazy static initialization
once_cell = "1.19"
